# legged_hil

./: README.md
legged_control/: .gitignore
legged_control/legged_controllers/config/a1/: task.info
legged_control/legged_controllers/config/aliengo/: task.info
legged_control/legged_controllers/config/go1/: task.info
legged_control/legged_controllers/include/legged_controllers/: TargetTrajectoriesPublisher.h
legged_control/legged_controllers/launch/: load_controller.launch
legged_control/legged_controllers/src/: TargetTrajectoriesPublisher.cpp
legged_control/legged_interface/include/legged_interface/: LeggedInterface.h
legged_control/legged_interface/src/: LeggedInterface.cpp
legged_control/legged_joy/: CMakeLists.txt  package.xml
legged_control/legged_joy/config/: xbox_wired.yaml
legged_control/legged_joy/include/legged_joy/: xbox_joy.h
legged_control/legged_joy/src/: xbox_joy.cpp
legged_control_hil/: .gitignore  README.md
legged_control_hil/legged_hil_controllers/: CMakeLists.txt  legged_hil_controllers_plugins.xml  package.xml
legged_control_hil/legged_hil_controllers/config/a1/: task.info
legged_control_hil/legged_hil_controllers/config/alpha/: gait.info  reference.info  task.info
legged_control_hil/legged_hil_controllers/include/legged_hil_controllers/: LeggedHilController.h
legged_control_hil/legged_hil_controllers/launch/: load_controller.launch
legged_control_hil/legged_hil_controllers/src/: LeggedHilController.cpp
legged_control_hil/legged_hil_description/legged_mirle/legged_hil_mirle_description/: CMakeLists.txt  package.xml
legged_control_hil/legged_hil_description/legged_mirle/legged_hil_mirle_description/launch/: check_joint.rviz  display.launch  empty_world.launch  rt_empty_world.launch
legged_control_hil/legged_hil_description/legged_mirle/legged_hil_mirle_description/urdf/: robot.xacro
legged_control_hil/legged_hil_description/legged_mirle/legged_hil_mirle_description/urdf/alpha/: const.xacro
legged_control_hil/legged_hil_description/legged_mirle/legged_hil_mirle_description/urdf/common/: imu.xacro  leg.xacro
legged_control_hil/legged_hil_description/legged_unitree/legged_hil_unitree_description/: CMakeLists.txt  package.xml
legged_control_hil/legged_hil_description/legged_unitree/legged_hil_unitree_description/launch/: display.launch  empty_world.launch  rt_empty_world.launch
legged_control_hil/legged_hil_description/legged_unitree/legged_hil_unitree_description/urdf/: robot.xacro
legged_control_hil/legged_hil_description/legged_unitree/legged_hil_unitree_description/urdf/common/: gazebo.xacro  leg.xacro
legged_control_hil/legged_hil_gazebo/: CMakeLists.txt  legged_hil_hw_sim_plugins.xml  package.xml
legged_control_hil/legged_hil_gazebo/config/alpha/: default.yaml  legged_hil.yaml
legged_control_hil/legged_hil_gazebo/include/legged_hil_gazebo/: LeggedHilHWSim.h
legged_control_hil/legged_hil_gazebo/src/: LeggedHilHWSim.cpp
legged_control_hil/legged_hil_hw/: CMakeLists.txt  package.xml
legged_control_hil/legged_hil_hw/config/: a1.yaml  alpha.yaml  controllers.yaml  legged_hil.yaml
legged_control_hil/legged_hil_hw/include/legged_hil_hw/: LeggedHilHW.h  LeggedHilHWLoop.h
legged_control_hil/legged_hil_hw/launch/: a1.launch  legged_hil_hw_mirle.launch  legged_hil_hw_unitree.launch
legged_control_hil/legged_hil_hw/src/: LeggedHilHW.cpp  LeggedHilHWLoop.cpp
legged_control_hil/legged_hil_interface/: CMakeLists.txt  package.xml
legged_control_hil/legged_hil_interface/include/legged_hil_interface/hardware_interface/: ImpedanceJointInterface.h
legged_control_hil/legged_hil_interface/scripts/: generate_urdf.sh
legged_control_hil/legged_hil_lcm/: CMakeLists.txt  package.xml
legged_control_hil/legged_hil_lcm/include/legged_hil_lcm/: contacts_msg_t.hpp  imu_msg_t.hpp  joints_cmd_t.hpp  joints_msg_t.hpp
legged_control_hil/legged_hil_lcm/lcm/: contacts_msg_t.lcm  imu_msg_t.lcm  joints_cmd_t.lcm  joints_msg_t.lcm
legged_control_hil/legged_hil_lcm_hw/: CMakeLists.txt  package.xml
legged_control_hil/legged_hil_lcm_hw/include/legged_hil_lcm_hw/: LcmHW.h
legged_control_hil/legged_hil_lcm_hw/src/: LcmHW.cpp  legged_hil_lcm_hw_node.cpp
ocs2/ocs2_core/include/ocs2_core/thread_support/: ThreadPool.h
ocs2/ocs2_core/src/thread_support/: ThreadPool.cpp
ocs2/ocs2_sqp/ocs2_sqp/include/ocs2_sqp/: SqpSettings.h
ocs2/ocs2_sqp/ocs2_sqp/src/: SqpSettings.cpp  SqpSolver.cpp
shell_script/hw/: docker_exec.sh  docker_run.sh  lcm.sh
shell_script/sim/: docker_exec.sh  docker_run.sh
