<?xml version="1.0"?>
<package format="2">
    <name>legged_hil_gazebo</name>
    <version>0.0.0</version>
    <description>The legged_hil_gazebo packages.</description>
    <maintainer email="chenghsien1208@gmail.com">Hsien</maintainer>
    <license>BSD</license>
    <author email="chenghsien1208@gmail.com">Hsien</author>

    <!-- buildtool_depend: dependencies of the build process -->
    <buildtool_depend>catkin</buildtool_depend>
    <!-- depend: build, export, and execution dependency -->
    <depend>roscpp</depend>
    <depend>legged_hil_interface</depend>
    <depend>gazebo_dev</depend>
    <depend>gazebo_ros_control</depend>
    <depend>gazebo_ros</depend>
    <depend>lcm</depend>
    <depend>legged_hil_lcm</depend>
    <depend>legged_hil_mirle_description</depend>
    <depend>legged_hil_unitree_description</depend>

    <export>
        <gazebo_ros_control plugin="${prefix}/legged_hil_hw_sim_plugins.xml"/>
        <gazebo_ros gazebo_model_path="${prefix}"/>
    </export>
</package>
