<?xml version="1.0"?>
<package format="2">
    <name>legged_hil_interface</name>
    <version>0.0.0</version>
    <description>The legged_hil_interface package</description>

    <maintainer email="chenghsien1208@gmail.com">Hsien</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_clang_tools</build_depend>
    <depend>roscpp</depend>
    <depend>hardware_interface</depend>

    <export>

    </export>
</package>
