<?xml version="1.0"?>
<package format="2">
  <name>legged_hil_lcm</name>
  <version>0.0.1</version>
  <description>LCM message definitions for legged robot HIL</description>

  <maintainer email="chenghsien1208@gmail.com">Hsien</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>lcm</depend>
</package>
