<?xml version="1.0"?>
<package format="2">
  <name>legged_hil_mirle_description</name>
  <version>0.0.0</version>
  <description>The legged_mirel_description package</description>
  <maintainer email="chenghsien1208@gmial.com">Hsien</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  
  <export>
  </export>
</package>
